[gd_scene load_steps=7 format=3 uid="uid://cb2rwntd2s065"]

[ext_resource type="Script" path="res://scripts/player/weapon_manager.gd" id="1_1tytp"]
[ext_resource type="PackedScene" uid="uid://lyyc6u3slkca" path="res://scenes/weapons/pistol.tscn" id="1_qsn5i"]
[ext_resource type="PackedScene" uid="uid://sjytiuvopdi3" path="res://scenes/weapons/shotgun.tscn" id="2_frp63"]
[ext_resource type="PackedScene" uid="uid://j0p8llsbpo0o" path="res://scenes/weapons/chaingun.tscn" id="4_5okys"]
[ext_resource type="PackedScene" uid="uid://beui6n2v6ebbo" path="res://scenes/weapons/axe.tscn" id="4_wc26d"]
[ext_resource type="PackedScene" uid="uid://demh0215o684x" path="res://scenes/weapons/rocket_launcher.tscn" id="5_aqioh"]

[node name="WeaponManager" type="Node3D"]
script = ExtResource("1_1tytp")

[node name="RightPosition" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, -0.2, -0.2)

[node name="Pistol" parent="RightPosition" instance=ExtResource("1_qsn5i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00488067, -0.00371122, 0.000459611)

[node name="Shotgun" parent="RightPosition" instance=ExtResource("2_frp63")]

[node name="Axe" parent="RightPosition" instance=ExtResource("4_wc26d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05, -0.1, -0.1)

[node name="CenterPosition" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.325, 0)

[node name="Chaingun" parent="CenterPosition" instance=ExtResource("4_5okys")]

[node name="RocketLauncher" parent="CenterPosition" instance=ExtResource("5_aqioh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0.15)

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
bus = &"SFX"

[node name="CooldownTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
